# TechOpen_2020_CPlusPlus

./: README.md
2_sem/code/: Makefile  README.md  hserver.c  hserver.h  http.c  http.h  http_request.c  http_request.h  http_response.c  http_response.h  log.c  log.h  network.c  network.h  process.c  process.h
3/: Lec3.pptx
3/code/: Makefile  hash.c  hash.h  list.c  list.h  test.c  tree.c  tree.h  vector.c  vector.h
4/: Lec4.pptx
4/code/: env.c  exec_child.c  exec_master.c  parser.c  pipe.c  signal.c  tcp_client.c  tcp_server.c  udp_client.c  udp_server.c
5/code/: CMakeLists.txt
5/code/exceptions/: CMakeLists.txt  main.cpp
5/code/oop/: 1_procedural.cpp  2_oop.cpp  (+1 more)
6/code/: 1_global_operator_overload.cpp  2_copy_constructor.cpp  3_object_as_field.cpp  CMakeLists.txt
7/code/: 1_base_inheritance.cpp  2_base_inheritance_app.cpp  3_polymorphism.cpp  4_abstract.cpp  5_pure_virtual_method_call.cpp  6_mult_inheritance.cpp  7_diamond_problem.cpp  8_interfaces.cpp  CMakeLists.txt  explicit.cpp
8/code/: 1_new_delete.cpp  2_smart_ptrs.cpp  3_principle.cpp  4_builder.cpp  5_observer.cpp  CMakeLists.txt
Hw-1/: Makefile
Hw-1/btests/: 2.7.tst  3.4.tst  3.5.tst  3.6.tst
Hw-2/: Makefile
Hw-4/: Makefile
Hw-6/: Makefile
game/: CMakeLists.txt
game/client/: CMakeLists.txt  Client.cpp  Client.h  Object.cpp  Object.h  Player.cpp  Player.h  main.cpp
game/common/: User.cpp  User.h
game/messages/: ServerToUserMessage.cpp  ServerToUserMessage.h  SessionCreatedMessage.cpp  SessionCreatedMessage.h  UserInitMessage.cpp  UserInitMessage.h  UserToServerMessage.cpp  UserToServerMessage.h
game/server/: CMakeLists.txt  GameObject.cpp  GameObject.h  Player.cpp  Player.h  Server.cpp  Server.h  Session.cpp  Session.h  main.cpp
(+96 files in other folders)
