cmake_minimum_required(VERSION 3.15)
project(lec7)

set(CMAKE_CXX_STANDARD 17)

add_executable(1_base_inheritance 1_base_inheritance.cpp)
add_executable(2_base_inheritance_app 2_base_inheritance_app.cpp)
add_executable(3_polymorphism 3_polymorphism.cpp)
add_executable(4_abstract 4_abstract.cpp)
add_executable(5_pure_virtual_method_call 5_pure_virtual_method_call.cpp)
add_executable(6_mult_inheritance 6_mult_inheritance.cpp)
add_executable(7_diamond_problem 7_diamond_problem.cpp)
add_executable(8_interfaces 8_interfaces.cpp)
add_executable(explicit explicit.cpp)